openwhisk/influxdb/ingress-influxdb.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  routes:
  - kind: Rule
    match: Host(`influxdb-gateway.liquidfaas.cloud`)
    services:
    - kind: Service
      name: influxdb-influxdb2
      namespace: influxdb
      port: 80
